--- a/app/partials/impressaoOrcamento.html
+++ b/app/partials/impressaoOrcamento.html
@@ -8,66 +8,67 @@
   </div>
 
   <div class="info">
-    <br>
-    <table class="dados">
-      <tr>
-        <td>
-          <h5>Cliente: </h5>
-          ({{orcamento.pedido.cliente.codigo}}) {{orcamento.pedido.cliente.nome}}
-        </td>
-        <td>
-          <h5>CPF/CNPJ: </h5>
-          {{orcamento.pedido.cliente.cpf || orcamento.pedido.cliente.cnpj}}
-        </td>
-        <td>
-          <h5>Insc. Est.: </h5>
-          {{orcamento.pedido.cliente.iEstadual}}
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <h5>Endereço: </h5>
-          {{orcamento.pedido.cliente.endereco.logradouro}} {{orcamento.pedido.cliente.endereco.numero}}
-        </td>
-        <td>
-          <h5>Bairro: </h5>
-          {{orcamento.pedido.cliente.endereco.bairro}}, {{orcamento.pedido.cliente.endereco.cidade}} - {{orcamento.pedido.cliente.endereco.uf}}
-        </td>
-        <td>
-          <h5>CEP: </h5>
-          {{orcamento.pedido.cliente.endereco.cep}}
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <h5>Telefone: </h5>
-          {{orcamento.pedido.cliente.endereco.ddd}} {{orcamento.pedido.cliente.telefone}}
-        </td>
-        <td>
-          <h5>Celular: </h5>
-          {{orcamento.pedido.cliente.celular}}
-        </td>
-        <td>
-          <h5>email: </h5>
-          {{orcamento.pedido.cliente.email}}
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <h5>Vendedor: </h5>
-          ({{orcamento.pedido.vendedor.codigo}}) {{orcamento.pedido.vendedor.nome}}
-        </td>
-        <td>
-          <h5>Loja: </h5>
-          {{orcamento.pedido.loja.shop_name}}
-        </td>
-        <td>
-          <h5>Data da emissão: </h5>
-          {{orcamento.pedido.dataPedido | date: 'medium'}}
-        </td>
-      </tr>
-    </table>
-    <br>
+    <!--<br>-->
+    <!--<table class="dados">-->
+      <!--<tr>-->
+        <!--<td>-->
+          <!--<h5>Cliente: </h5>-->
+          <!--({{orcamento.pedido.cliente.codigo}}) {{orcamento.pedido.cliente.nome}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>CPF/CNPJ: </h5>-->
+          <!--{{orcamento.pedido.cliente.cpf || orcamento.pedido.cliente.cnpj}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>Insc. Est.: </h5>-->
+          <!--{{orcamento.pedido.cliente.iEstadual}}-->
+        <!--</td>-->
+      <!--</tr>-->
+      <!--<tr>-->
+        <!--<td>-->
+          <!--<h5>Endereço: </h5>-->
+          <!--{{orcamento.pedido.cliente.endereco.logradouro}} {{orcamento.pedido.cliente.endereco.numero}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>Bairro: </h5>-->
+          <!--{{orcamento.pedido.cliente.endereco.bairro}}, {{orcamento.pedido.cliente.endereco.cidade}} - {{orcamento.pedido.cliente.endereco.uf}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>CEP: </h5>-->
+          <!--{{orcamento.pedido.cliente.endereco.cep}}-->
+        <!--</td>-->
+      <!--</tr>-->
+      <!--<tr>-->
+        <!--<td>-->
+          <!--<h5>Telefone: </h5>-->
+          <!--{{orcamento.pedido.cliente.endereco.ddd}} {{orcamento.pedido.cliente.telefone}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>Celular: </h5>-->
+          <!--{{orcamento.pedido.cliente.celular}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>email: </h5>-->
+          <!--{{orcamento.pedido.cliente.email}}-->
+        <!--</td>-->
+      <!--</tr>-->
+      <!--<tr>-->
+        <!--<td>-->
+          <!--<h5>Vendedor: </h5>-->
+          <!--({{orcamento.pedido.vendedor.codigo}}) {{orcamento.pedido.vendedor.nome}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>Loja: </h5>-->
+          <!--{{orcamento.pedido.loja.shop_name}}-->
+        <!--</td>-->
+        <!--<td>-->
+          <!--<h5>Data da emissão: </h5>-->
+          <!--{{orcamento.pedido.dataPedido | date: 'medium'}}-->
+        <!--</td>-->
+      <!--</tr>-->
+    <!--</table>-->
+    <!--<br>-->
+    <h5 class="text-center">Não é documento fiscal.</h5>
     <br>
 
     <div ng-repeat="bloco in orcamento.pedido.blocos track by $index">
