--- a/app/views/followUpEmLote.html
+++ b/app/views/followUpEmLote.html
@@ -106,7 +106,9 @@
       </div>
     </div>
 
-    <h4>&nbsp;</h4>
+    <div class="col-xs-12">
+      <h4>&nbsp;</h4>
+    </div>
     <div class="row">
       <div class="col-xs-12">
         <table class="tabela tabela-bordered tabela-esticada" id="tabela-em-lote">
@@ -150,6 +152,7 @@
       </div>
     </div>
     <div class="paginas">
+      <h4 class="text-center">{{emLote.pagination.total}} resultado{{emLote.pagination.total == 1 ? '.' : 's.'}}</h4>
       <ul uib-pagination total-items="emLote.pagination.total" ng-model="emLote.pagination.current" max-size="5" items-per-page="emLote.pagination.max" ng-change="emLote.pagination.mudarPagina()" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
     </div>
   </div>
