--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,6 +1,25 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
   <!--<div class="footer">-->
   <div class="footer">
+
+    <div class="dropup pull-left">
+      <button class="btn btn-primary dropdown-toggle" type="button" id="dropup-atalhos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="glyphicon glyphicon-list-alt"></span> Atalhos de teclado
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu atalhos" aria-labelledby="dropup-atalhos">
+        <!--<li role="separator" class="divider"></li>-->
+        <li><a><h4>Orçamento</h4></a></li>
+        <li><a href=""><div class="comando"><span class="label label-primary">Enter</span> Ação ou avançar p/ próx. campo</div></a></li>
+        <li><a href=""><div class="comando"><span class="label label-primary">Shift</span> + <span class="label label-primary">Enter</span> Avançar para próximo módulo</div></a></li>
+        <li><a href=""><div class="comando"><span class="label label-primary">F1</span> Abrir busca</div></a></li>
+        <li><a href=""><div class="comando"><span class="label label-primary">F5</span> Salvar orçamento</div></a></li>
+        <li><a><h4>Janelas de busca</h4></a></li>
+        <li><a href=""><div class="comando"><span class="label label-primary">Enter</span> Buscar</div></a></li>
+        <li><a href=""><div class="comando"><span class="label label-primary">Esc</span> Fechar janela</div></a></li>
+      </ul>
+    </div>
+
     <span class="agencia"><a href="http://www.futuraagencia.com.br/" target="_blank">Futura Agência</a> - 2016 - Commercial ver. {{versao}}</span>
   </div>
 </div>
