--- a/app/partials/dashboard/sobre.html
+++ b/app/partials/dashboard/sobre.html
@@ -12,21 +12,21 @@
   </div>
 </div>
 
-<div class="col-md-5 col-lg-4 col-lg-push-1">
-  <div class="card">
-    <div class="header">
-      <h3>Atalhos de teclado</h3>
-    </div>
-    <div class="atalhos">
-      <span class="comando"><span class="label label-primary">Enter</span> Ação ou avançar p/ próx. campo</span>
-      <span class="comando"><span class="label label-primary">Shift</span> + <span
-        class="label label-primary">Enter</span> Avançar para próximo módulo</span>
-      <span class="comando"><span class="label label-primary">F1</span> Abrir busca</span>
-      <span class="comando"><span class="label label-primary">F5</span> Salvar orçamento</span>
-      <!--<span class="comando" ng-repeat="n in getNumber(5) track by $index"><span class="label label-primary">comando</span> descrição</span>-->
-    </div>
-  </div>
-</div>
+<!--<div class="col-md-5 col-lg-4 col-lg-push-1">-->
+  <!--<div class="card">-->
+    <!--<div class="header">-->
+      <!--<h3>Atalhos de teclado</h3>-->
+    <!--</div>-->
+    <!--<div class="atalhos">-->
+      <!--<span class="comando"><span class="label label-primary">Enter</span> Ação ou avançar p/ próx. campo</span>-->
+      <!--<span class="comando"><span class="label label-primary">Shift</span> + <span-->
+        <!--class="label label-primary">Enter</span> Avançar para próximo módulo</span>-->
+      <!--<span class="comando"><span class="label label-primary">F1</span> Abrir busca</span>-->
+      <!--<span class="comando"><span class="label label-primary">F5</span> Salvar orçamento</span>-->
+      <!--&lt;!&ndash;<span class="comando" ng-repeat="n in getNumber(5) track by $index"><span class="label label-primary">comando</span> descrição</span>&ndash;&gt;-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 
 <div class="col-md-5 col-lg-4 col-lg-push-1">
   <div class="card">
