--- a/app/views/followUpEmLote.html
+++ b/app/views/followUpEmLote.html
@@ -29,7 +29,7 @@
             </span>
           </div>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
           <h4>Cliente</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-value="emLote.filtro.cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
@@ -39,7 +39,7 @@
             </span>
         </div>
         </div>
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-3">
           <h4>Vendedor</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-value="emLote.filtro.vendedor.nome" placeholder="Clique na lupa para buscar" readonly="true">
@@ -49,9 +49,23 @@
             </span>
           </div>
         </div>
+        <div class="col-xs-12 col-md-2">
+          <h4>Loja</h4>
+          <ui-select ng-model="emLote.filtro.loja" title="Escolha uma loja">
+            <ui-select-match placeholder="Escolha uma loja">{{$select.selected.nome}}</ui-select-match>
+            <ui-select-choices repeat="loja.id as loja in emLote.lojas | propsFilter: {nome: $select.search, codigo: $select.search}">
+              <div ng-bind-html="loja.nome | highlight: $select.search"></div>
+              <small>
+                Código: <span ng-bind-html="loja.codigo | highlight: $select.search"></span>
+              </small>
+            </ui-select-choices>
+          </ui-select>
+        </div>
         <div class="col-md-2">
           <h4>Status</h4>
-          <input type="text" class="form-control" placeholder="" readonly>
+          <select class="form-control" ng-model="emLote.filtro.status" ng-options="status.id as status.nome for status in emLote.statusArray">
+            <option value="">Todos</option>
+          </select>
         </div>
         <div class="col-md-2">
           <h4>Inicial</h4>
@@ -120,6 +134,8 @@
               </div>
             </th>
             <th>Código</th>
+            <th>Loja</th>
+            <th>Status</th>
             <th>Cliente</th>
             <th>Vendedor</th>
             <th>Data</th>
@@ -134,12 +150,16 @@
                 </div>
               </td>
               <td data-label="Código">{{p.pedido.codigo}}</td>
+              <td data-label="Loja">{{p.pedido.loja.codigo}}</td>
+              <td data-label="Status">{{getStatusName(p.pedido.idStatus)}}</td>
               <td data-label="Cliente">{{p.pedido.cliente.nome}}</td>
               <td data-label="Vendedor">{{p.pedido.vendedor.nome}}</td>
               <td data-label="Data">{{p.pedido.dataPedido | date: 'short'}}</td>
               <td data-label="Total">{{p.pedido.valor | currency:'R$ '}}</td>
             </tr>
             <tr class="hidden-xs" ng-repeat="n in getNumber(emLote.pagination.max > emLote.pedidos.length ? emLote.pagination.max - emLote.pedidos.length : 0) track by $index">
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
