--- a/app/views/follow_up.html
+++ b/app/views/follow_up.html
@@ -49,7 +49,7 @@
             </span>
           </div>
         </div>
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-4">
           <h4>Cliente</h4>
           <div class="input-group">
             <input type="text" class="form-control" ng-value="followUp.filtro.cliente.nome" placeholder="Clique na lupa para buscar" readonly="true">
@@ -58,6 +58,18 @@
               <button class="btn btn-default" tabindex="-1" ng-click="buscarCliente()"><span class="glyphicon glyphicon-search"></span></button>
             </span>
           </div>
+        </div>
+        <div class="col-xs-12 col-md-2">
+          <h4>Loja</h4>
+          <ui-select ng-model="followUp.filtro.loja" title="Escolha uma loja">
+            <ui-select-match placeholder="Escolha uma loja">{{$select.selected.nome}}</ui-select-match>
+            <ui-select-choices repeat="loja.id as loja in followUp.lojas | propsFilter: {nome: $select.search, codigo: $select.search}">
+              <div ng-bind-html="loja.nome | highlight: $select.search"></div>
+              <small>
+                Código: <span ng-bind-html="loja.codigo | highlight: $select.search"></span>
+              </small>
+            </ui-select-choices>
+          </ui-select>
         </div>
         <div class="col-xs-12 col-md-2">
           <h4>Responsável</h4>
@@ -125,13 +137,13 @@
           <tr>
             <th></th>
             <th>Código</th>
+            <th>Loja</th>
             <th>Orçamento</th>
             <th>Cliente</th>
             <th>Responsável</th>
             <th>Vendedor</th>
             <th>Próx Contato</th>
             <th>Último Parecer</th>
-            <th>Cadastro</th>
             <th></th>
           </tr>
           </thead>
@@ -140,13 +152,13 @@
             <td class="hidden-xs"><div class="mostrador-de-cor" ng-style="{backgroundColor:a.historico[0].status.cor}" uib-tooltip="{{a.historico[0].status.nome}}"></div></td>
             <td class="visible-xs-block" data-label="Status"><span class="label label-default" ng-style="{backgroundColor:a.historico[0].status.cor}">{{a.historico[0].status.nome}}</span></td>
             <td data-label="Código">{{a.codigo}}</td>
+            <td data-label="Loja">{{a.loja.codigo}}</td>
             <td data-label="Código do orçamento">{{a.pedido.codigo}}</td>
             <td data-label="Cliente">{{a.pedido.cliente.nome | truncate:35}}</td>
             <td data-label="Responsável">{{a.historico[0].responsavel.usuario || 'Não disponível'}}</td>
             <td data-label="Vendedor">{{a.pedido.vendedor.nome || 'Não disponível'}}</td>
             <td data-label="Data do próximo contato">{{a.historico.length ? (a.historico[0].proximoContato | date:'dd/MM/yyyy') : 'Não disponível'}}</td>
             <td data-label="Data do último parecer">{{a.parecer.length ? (a.parecer[0].dataCadastro | date:'short') : 'Não disponível'}}</td>
-            <td data-label="Data de cadastro">{{a.dataCadastro | date:'short'}}</td>
             <td class="hidden-xs"><a ng-href="#/atendimento/open?type=attendance&code={{a.codigo}}"><span class="glyphicon glyphicon-open-file"></span></a></td>
           </tr>
           <tr class="hidden-xs" ng-repeat="n in getNumber(pagination.max - followUp.atendimentos.length) track by $index">
