--- a/app/views/orcamento.html
+++ b/app/views/orcamento.html
@@ -1,18 +1,3 @@
-<div class="atalhos-flutuantes hidden-xs">
-  <div class="header clearfix">
-    <h4 class="pull-left">Atalhos de teclado</h4>
-    <span class="pull-right">
-      <span class="glyphicon glyphicon-remove close" ng-click="escondeAtalhos()"></span>
-    </span>
-  </div>
-  <div class="atalhos">
-    <div class="comando"><span class="label label-primary">Enter</span> Ação ou avançar p/ próx. campo</div>
-    <div class="comando"><span class="label label-primary">Shift</span> + <span class="label label-primary">Enter</span> Avançar para próximo módulo</div>
-    <div class="comando"><span class="label label-primary">F1</span> Abrir busca</div>
-    <div class="comando"><span class="label label-primary">F5</span> Salvar orçamento</div>
-  </div>
-</div>
-
 <div id="formulario-orcamento" class="container">
 
   <div class="row" ng-if="orcamento.pedido.erp">
@@ -589,18 +574,14 @@
           <span class="glyphicon glyphicon-envelope"></span> Enviar orçamento <span class="glyphicon glyphicon-remove close" data-dismiss="modal"></span>
         </div>
       </div>
-      <div class="body xs-2 condensar-rows">
+      <div class="body xs condensar-rows">
         <div class="col-md-12">
           <h4>Endereço</h4>
-          <ui-select multiple tagging="orcamento.emailExterno" limit="10" sortable="true" search-enabled="orcamento.emails.length < 10" ng-model="orcamento.emails">
+          <ui-select multiple tagging="orcamento.emailExterno" limit="10" sortable="true" search-enabled="orcamento.emails.length < 10" ng-model="orcamento.emails" append-to-body="true" style="z-index: 1051">
             <ui-select-match placeholder="Informe os emails">{{$item.nome}} &lt;{{$item.email}}&gt;</ui-select-match>
             <ui-select-choices repeat="c in orcamento.contatos | filter: {nome: $select.search, email: $select.search}">
-              <div ng-if="!c.isTag" ng-bind-html="''+c.nome | highlight: $select.search">
-                <small>
-                  nome: {{c.nome}}
-                  email: <span ng-bind-html="''+c.email | highlight: $select.search"></span>
-                </small>
-              </div>
+              <div ng-bind-html="''+c.nome | highlight: $select.search"></div>
+              <small ng-if="!c.isTag">email: <span ng-bind-html="''+c.email | highlight: $select.search"></span></small>
               <div ng-if="c.isTag" ng-bind-html="(c.email | highlight: $select.search) +' (externo)'"></div>
             </ui-select-choices>
           </ui-select>
