--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -2,7 +2,7 @@
   <!--<div class="footer">-->
   <div class="footer">
 
-    <div class="dropup pull-left">
+    <div class="dropup pull-left" ng-hide="currentPath === '/login' || currentPath === '/signup'">
       <button class="btn btn-primary dropdown-toggle" type="button" id="dropup-atalhos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="glyphicon glyphicon-list-alt"></span> Atalhos de teclado
         <span class="caret"></span>
