--- a/app/partials/header-alternativo.html
+++ b/app/partials/header-alternativo.html
@@ -1,7 +1,6 @@
-<div class="header-alternativo">
-  <div class="logo">
-
-  </div>
+<div class="header-alternativo clearfix">
+  <div class="header_carrapeta"></div>
+  <div class="header_commercial"></div>
 
   <button class="btn btn-default botao-invertido" ng-hide="currentPath === '/login'"><span
     class="glyphicon glyphicon-log-in"></span>&nbsp; Login
