--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,4 +1,7 @@
-<div class="banner hidden-xs"></div>
+<div class="banner hidden-xs">
+  <div class="header_carrapeta"></div>
+  <div class="header_commercial"></div>
+</div>
 
 <span ng-controller="HeaderCtrl as header">
   <div class="navbar navbar-default">
