--- a/app/partials/modalBuscarProduto.html
+++ b/app/partials/modalBuscarProduto.html
@@ -63,9 +63,9 @@
       </div>
     </div>
 
-    <div class="paginas">
-      <ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="5" items-per-page="pagination.max" ng-change="pagination.mudarPagina(nmProduto)" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>
-    </div>
+    <!--<div class="paginas">-->
+      <!--<ul uib-pagination total-items="pagination.total" ng-model="pagination.current" max-size="5" items-per-page="pagination.max" ng-change="pagination.mudarPagina(nmProduto)" class="pagination-sm" boundary-link-numbers="true" rotate="true" force-ellipses="true" previous-text="&lsaquo; anterior" next-text="próximo &rsaquo;"></ul>-->
+    <!--</div>-->
 
   </div>
 
