--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,11 +1,33 @@
 .banner {
-  background-image: url('../images/logotipo.png');
+  //background-image: url('../images/logotipo.png');
+  //background-repeat: no-repeat;
+  //background-position: center;
+  //background-size: 300px;
+  //width: 100%;
+  height: 110px;
+  background-color: white;
+}
+
+.header_commercial {
+  background-image: url('../images/header_commercial.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 300px;
-  width: 100%;
-  height: 110px;
+  width: 300px;
+  height: 100%;
   background-color: white;
+  float: right;
+}
+
+.header_carrapeta {
+  background-image: url('../images/header_carrapeta.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+  width: 300px;
+  height: 100%;
+  background-color: white;
+  float: left;
 }
 
 .navbar {
@@ -213,10 +235,10 @@
     //box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
     //border-bottom-left-radius: 6px;
     //border-bottom-right-radius: 6px;
-    background-image: url('../images/logotipo.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 300px;
+    //background-image: url('../images/logotipo.png');
+    //background-position: center;
+    //background-repeat: no-repeat;
+    //background-size: 300px;
   //  left: 0;
   //  right: 0;
   //}
