--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -543,13 +543,28 @@ span:focus, a:focus {
   z-index: 2000 !important; }
 
 .banner {
-  background-image: url("../images/logotipo.png");
+  height: 110px;
+  background-color: white; }
+
+.header_commercial {
+  background-image: url("../images/header_commercial.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 300px;
-  width: 100%;
-  height: 110px;
-  background-color: white; }
+  width: 300px;
+  height: 100%;
+  background-color: white;
+  float: right; }
+
+.header_carrapeta {
+  background-image: url("../images/header_carrapeta.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+  width: 300px;
+  height: 100%;
+  background-color: white;
+  float: left; }
 
 .navbar {
   margin-bottom: 0;
@@ -653,11 +668,7 @@ span:focus, a:focus {
   height: 140px;
   background-color: white;
   border-bottom: 10px solid #3b5998;
-  z-index: 10;
-  background-image: url("../images/logotipo.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 300px; }
+  z-index: 10; }
   .header-alternativo button {
     display: inline-block;
     float: right;
