--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,6 +1,6 @@
 <div class="banner hidden-xs">
-  <div class="header_carrapeta"></div>
-  <div class="header_commercial"></div>
+  <div class="header_left"></div>
+  <div class="header_right"></div>
 </div>
 
 <span ng-controller="HeaderCtrl as header">
