--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,33 +1,33 @@
 .banner {
-  //background-image: url('../images/logotipo.png');
-  //background-repeat: no-repeat;
-  //background-position: center;
-  //background-size: 300px;
-  //width: 100%;
+  background-image: url('../images/logotipo.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+  width: 100%;
   height: 110px;
   background-color: white;
 }
 
-.header_commercial {
-  background-image: url('../images/header_commercial.png');
+.header_left {
+  background-image: url('../images/header_futura.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 300px;
-  width: 300px;
-  height: 100%;
-  background-color: white;
-  float: right;
-}
-
-.header_carrapeta {
-  background-image: url('../images/header_carrapeta.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 300px;
-  width: 300px;
+  background-size: contain;
+  width: 180px;
   height: 100%;
   background-color: white;
   float: left;
+}
+
+.header_right {
+  background-image: url('../images/header_carrapeta.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 200px;
+  height: 100%;
+  background-color: white;
+  float: right;
 }
 
 .navbar {
@@ -216,6 +216,11 @@
 }
 
 .header-alternativo {
+  background-image: url('../images/logotipo.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+
   position: fixed;
   top: 0;
   width: 100%;
