--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -543,28 +543,33 @@ span:focus, a:focus {
   z-index: 2000 !important; }
 
 .banner {
+  background-image: url("../images/logotipo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
+  width: 100%;
   height: 110px;
   background-color: white; }
 
-.header_commercial {
-  background-image: url("../images/header_commercial.png");
+.header_left {
+  background-image: url("../images/header_futura.png");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 300px;
-  width: 300px;
-  height: 100%;
-  background-color: white;
-  float: right; }
-
-.header_carrapeta {
-  background-image: url("../images/header_carrapeta.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 300px;
-  width: 300px;
+  background-size: contain;
+  width: 180px;
   height: 100%;
   background-color: white;
   float: left; }
+
+.header_right {
+  background-image: url("../images/header_carrapeta.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 200px;
+  height: 100%;
+  background-color: white;
+  float: right; }
 
 .navbar {
   margin-bottom: 0;
@@ -662,6 +667,10 @@ span:focus, a:focus {
     font-size: 87px; }
 
 .header-alternativo {
+  background-image: url("../images/logotipo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300px;
   position: fixed;
   top: 0;
   width: 100%;
@@ -710,6 +719,20 @@ div[name="footer"] .navbar {
     color: white; }
     .footer .agencia a:hover, .footer .agencia a:visited {
       color: white; }
+
+.atalhos-doido {
+  width: 100%;
+  background-color: #2d4373;
+  position: fixed;
+  bottom: 60px;
+  height: 30px;
+  color: white;
+  padding: 3px 10px;
+  text-align: center; }
+  .atalhos-doido .comando {
+    display: inline;
+    margin-right: 20px;
+    vertical-align: middle; }
 
 #login {
   text-align: center; }
